{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 197,
  "lineage": "94562af4-bdbc-b03b-5158-764c351de151",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "api_ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:347554562486:security-group/sg-091b437f0b5ebd7ff",
            "description": "This will only allow traffic from API ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-091b437f0b5ebd7ff",
            "ingress": [],
            "name": "timing-ecs-api",
            "name_prefix": "",
            "owner_id": "347554562486",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0dac97be087b126b5"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3000,
            "id": "sgrule-1940260074",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-091b437f0b5ebd7ff",
            "security_group_rule_id": "sgr-09ed2d59de2d0c4da",
            "self": false,
            "source_security_group_id": "sg-06a377a74d7357d62",
            "timeouts": null,
            "to_port": 3000,
            "type": "ingress"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "source_security_group_id"
              }
            ]
          ],
          "dependencies": [
            "aws_security_group.api_ecs",
            "data.aws_ssm_parameter.app_alb_security_group_id",
            "data.aws_ssm_parameter.vpc_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "allowing traffic from API ECS on 5432",
            "from_port": 5432,
            "id": "sgrule-977562970",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04a5c36c3949dc2fc",
            "security_group_rule_id": "sgr-0d15c83e27b9a2333",
            "self": false,
            "source_security_group_id": "sg-091b437f0b5ebd7ff",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "security_group_id"
              }
            ]
          ],
          "dependencies": [
            "aws_security_group.api_ecs",
            "data.aws_ssm_parameter.rds_security_group_id",
            "data.aws_ssm_parameter.vpc_id"
          ]
        }
      ]
    }
  ]
}